Clean repo and refactor stream usage