@@ -11,6 +11,7 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -51,10 +52,13 @@ public class CarBookingService {
             throw new IllegalArgumentException("endDate can't be before startDate!");
         }
         List<CarBooking> allBookings = getAllBookings();
-        for (CarBooking booking : allBookings) {
-            if (booking != null && booking.getStatus().equals(BookingStatus.ACTIVE) && booking.getCar().getId().equals(car.getId())) {
-                throw new IllegalArgumentException("Car already booked!");
-            }
+        boolean carAlreadyBooked = allBookings.stream()
+                .anyMatch(booking -> booking != null
+                        && booking.getStatus() == BookingStatus.ACTIVE
+                        && booking.getCar() != null
+                        && Objects.equals(booking.getCar().getId(), car.getId()));
+        if (carAlreadyBooked) {
+            throw new IllegalArgumentException("Car already booked!");
         }
 
         long numberOfDays = ChronoUnit.DAYS.between(startDate, endDate);
@@ -66,7 +70,9 @@ public class CarBookingService {
 
     public List<CarBooking> getAllActiveBookings() {
         List<CarBooking> allBookings = getAllBookings();
-        return allBookings.stream().filter(booking -> booking.getStatus().equals(BookingStatus.ACTIVE)).toList();
+        return allBookings.stream()
+                .filter(booking -> booking != null && booking.getStatus() == BookingStatus.ACTIVE)
+                .collect(Collectors.toList());
     }
 
     public CarBooking getCarBookingById(UUID id) {
@@ -96,26 +102,13 @@ public class CarBookingService {
             return cars;
         }
 
-        List<Car> availableCars = new ArrayList<>();
-        for (Car car : cars) {
-            if (car == null || car.getId() == null) {
-                continue;
-            }
-            boolean hasActiveBooking = false;
-            for (CarBooking booking : allBookings) {
-                if (booking == null || booking.getCar() == null || booking.getCar().getId() == null) {
-                    continue;
-                }
-                if (booking.getCar().getId().equals(car.getId()) && booking.getStatus() == BookingStatus.ACTIVE) {
-                    hasActiveBooking = true;
-                    break;
-                }
-            }
-            if (!hasActiveBooking) {
-                availableCars.add(car);
-            }
-        }
-        return availableCars;
+        return cars.stream()
+                .filter(car -> car != null && car.getId() != null)
+                .filter(car -> allBookings.stream()
+                        .filter(booking -> booking != null && booking.getCar() != null && booking.getCar().getId() != null)
+                        .noneMatch(booking -> booking.getStatus() == BookingStatus.ACTIVE
+                                && Objects.equals(booking.getCar().getId(), car.getId())))
+                .collect(Collectors.toList());
     }
 
     public List<Car> getNotYetBookedElectricCars() {
@@ -136,9 +129,13 @@ public class CarBookingService {
             return new ArrayList<>();
         }
 
-        return allBookings.stream().filter(
-                booking -> booking != null && booking.getUser() != null && booking.getUser().getId() != null && booking.getUser().getId().equals(userId)).
-                map(CarBooking::getCar).toList();
+        return allBookings.stream()
+                .filter(booking -> booking != null
+                        && booking.getUser() != null
+                        && Objects.equals(booking.getUser().getId(), userId))
+                .map(CarBooking::getCar)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
 
     }
 }
